--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.2
 Flask-Cors==4.0.0
-protobuf==4.22.0
+protobuf==3.20.0  # Downgrade to a stable version
 pycryptodome==3.20.0
 httpx==0.27.0
 cachetools==5.3.3
-gunicorn==20.1.0  # Required for Vercel's serverless environment
+gunicorn==20.1.0
